# sample-opencv-for-catkin

./: CMakeLists.txt  README.md  package.xml
src/: buoycv.cpp
