<?xml version="1.0"?>
<package>
	<name>opencv-for-catkin-sample</name>
	<version>0.0.0</version>
	<description>The buoy package</description>

	<maintainer email="kannan.siddharth12@gmail.com">Siddharth Kannan</maintainer>

	<license>MIT</license>

	<author email="chinmoysam@gmail.com">Chinmoy Sam</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>opencv2</build_depend>  
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>opencv2</run_depend>


	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
